TileTable: fix overlapping border on selected formFieldTile

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/tile/fields/FormFieldTile.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/tile/fields/FormFieldTile.less
@@ -253,13 +253,15 @@
     }
   }
 
-  /* TODO [10.0] rmu: copied from StudioTile.less, refactor & adapt */
   &.selected {
     /* Use mix() instead of fade(), because the background is opaque */
     background-color: mix(@control-background-color, @item-selection-background-color, 35%);
 
-    /* Because changing the border width would cause the content box to change, */
-    /* we use an independent pseudo element for the tile border */
+    /* For selection we want a wider border but changing the border width would cause the content box to change.
+    To avoid this we create a pseudo element with a border as well. Then we have to border of the main element
+    plus the pseudo element's border leading to a 2px border. */
+    border: 1px solid @item-selection-border-color;
+
     &::before {
       content: '';
       pointer-events: none;
@@ -268,7 +270,8 @@
       left: 0;
       width: 100%;
       height: 100%;
-      border: 2px solid @item-selection-border-color;
+      border: 1px solid @item-selection-border-color;
+      border-radius: @border-radius;
       z-index: 1;
     }
   }
